--- a/src/public/assets/css/default/behaviour.module.css
+++ b/src/public/assets/css/default/behaviour.module.css
@@ -4,6 +4,7 @@
     height: 100%;
     flex-grow: 1;
     min-height: 0;
+    max-width: calc(100vw - 185px);
 }
 
 .t-container {
@@ -17,6 +18,7 @@
 
 .t-behaviour {
     display: flex;
+    position: relative;
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
@@ -47,27 +49,13 @@
     max-height: 100%;
 }
 
-.t-header {
-    display: grid;
-    grid-template-columns:
-        130px
-        /* Type/Date */
-        1fr 1fr
-        /* Comment/Teacher, Action/Info */
-        200px 105px;
-    /* Loc/Status Points */
-    border-bottom: 1px solid #e3e9ea;
-}
-
+.t-header,
 .t-row {
     display: grid;
     grid-template-columns:
-        260px
-        /* Type/Date */
+        130px
         1fr 1fr
-        /* Comment/Teacher, Action/Info */
         200px 105px;
-    /* Loc/Status Points */
     border-bottom: 1px solid #e3e9ea;
 }
 
@@ -195,7 +183,7 @@
 }
 
 .b-points-badge {
-    bottom: -20px;
+    bottom: -30px;
     position: absolute;
     right: 14px;
     align-items: center;
