--- a/src/public/assets/css/catppuccin-mocha/main.module.css
+++ b/src/public/assets/css/catppuccin-mocha/main.module.css
@@ -113,7 +113,7 @@
     position: relative;
     vertical-align: middle;
     width: 35px;
-    z-index: 100;
+    z-index: 10;
 }
 
 .openlink-pr-user .openlink__text {
@@ -547,6 +547,17 @@ ul {
 }
 
 .settings .theme-selector .theme-button {
+    position: relative;
+    background: var(--surface2);
+    width: 100%;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: var(--text);
+    border: 0;
+}
+
+.update-button {
     position: relative;
     background: var(--surface2);
     width: 100%;
