--- a/src/public/assets/css/catppuccin-mocha/timetable.module.css
+++ b/src/public/assets/css/catppuccin-mocha/timetable.module.css
@@ -35,6 +35,7 @@
     flex-grow: 1;
     width: 100%;
     max-width: calc(100vw - 185px);
+    min-height: 0;
 }
 
 .t-timetable {
@@ -49,6 +50,7 @@
         sans-serif;
     font-size: 14px;
     border: 0;
+    min-height: 0;
 }
 
 .t-header {
