--- a/src/public/assets/css/default/main.module.css
+++ b/src/public/assets/css/default/main.module.css
@@ -525,12 +525,21 @@ ul {
     z-index: 60;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    min-height: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
     font-family:
         Helvetica Neue,
         Arial,
         Helvetica,
         sans-serif;
     font-size: 14px;
+}
+
+.t-overlay > * {
+    min-height: 0;
+    flex-shrink: 1;
 }
 
 .settings {
